<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.demo.crocstackassignment.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout1"
        android:weightSum="7">

        <ImageView
            android:padding="@dimen/std_padding"
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <EditText
            android:onClick="openPlacePicker"
            android:cursorVisible="false"
            android:inputType="none"
            android:focusableInTouchMode="false"
            android:layout_marginRight="@dimen/std_padding"
            android:id="@+id/edit_location"
            android:maxLength="50"
            android:hint="@string/location"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout2"
        android:layout_below="@id/linear_layout1"
        android:weightSum="7">

        <ImageView
            android:padding="@dimen/std_padding"
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <EditText
            android:layout_marginRight="@dimen/std_padding"
            android:id="@+id/edit_hotel_name"
            android:maxLength="50"
            android:hint="@string/hotel_name"
            android:layout_weight="6"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:onClick="searchBtn"
        android:id="@+id/btn_search"
        android:text="@string/search"
        android:textAllCaps="false"
        android:layout_below="@+id/linear_layout2"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/std_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_below="@+id/btn_search"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_below="@id/btn_search"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:onClick="sortByCost"
        android:layout_margin="@dimen/std_padding"
        android:text="@string/cost"
        android:id="@+id/btn_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="sortByRating"
        android:layout_margin="@dimen/std_padding"
        android:text="@string/rating"
        android:id="@+id/btn_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <Button
            android:onClick="sortByCuisines"
            android:layout_margin="@dimen/std_padding"
            android:text="@string/cuisines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_below="@+id/linear_layout3"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>




    <android.support.v7.widget.RecyclerView
        android:layout_below="@id/linear_layout3"
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_bar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progress_bar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>





</RelativeLayout>
